--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "lib-flexible": "^0.3.2",
     "normalize.css": "^8.0.1",
     "vant": "^3.1.4",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@types/node": "^16.4.3",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
     "node-sass": "^6.0.1",
+    "postcss-plugin-px2rem": "^0.8.1",
     "sass": "^1.36.0",
     "sass-loader": "^12.1.0",
     "typescript": "^4.3.2",
